--- a/src/components/nav/nav.style.css
+++ b/src/components/nav/nav.style.css
@@ -16,6 +16,9 @@
   padding: 0.5rem 1rem;
   border-bottom: 3px solid transparent;
   transition: all 0.3s ease-in-out;
+  display: block;
+  text-decoration: none;
+  color: inherit;
 
   &:hover {
     cursor: pointer;
