Enhance Button Component

--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -35,3 +35,11 @@
     border-color: var(--primary-color);
   }
 }
+
+.btn[disabled] {
+  cursor: not-allowed;
+  background-color: var(--highlight-light-color);
+  &:hover {
+    color: inherit;
+  }
+}
